Carry over fix for misspelling from ad3a4ff9fd8ae6ddda77dfb143cc250d65295cd1

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2009-11-14 08:39+0100\n"
+"PO-Revision-Date: 2010-01-03 16:50+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5807,7 +5807,7 @@ msgid ""
 "Optimization options which are passed to the Debian build system and can/"
 "should be overriden by the package build if needed (default value: B<-g -"
 "O2>, or B<-g\\ -O0> if B<noopt> is specified in DEB_BUILD_OPTIONS). "
-"Overriding options can be used to explicitely set a higher optimization "
+"Overriding options can be used to explicitly set a higher optimization "
 "level, or work around compiler bugs, which only can be seen with some "
 "optimization levels (the last opt level \"wins\")."
 msgstr ""
@@ -11490,7 +11490,7 @@ msgstr "B<dpkg-trigger> [I<option>...] I<commande>"
 #. type: Plain text
 #: dpkg-trigger.1:15
 msgid ""
-"B<dpkg-trigger> is a tool to explicitely activate triggers and check for its "
+"B<dpkg-trigger> is a tool to explicitly activate triggers and check for its "
 "support on the running B<dpkg>."
 msgstr ""
 "B<dpkg-trigger> est un outil pour activer explicitement les actions "
