--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2009-11-18 12:54+0100\n"
+"PO-Revision-Date: 2010-01-03 16:52+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5667,7 +5667,7 @@ msgid ""
 "Optimization options which are passed to the Debian build system and can/"
 "should be overriden by the package build if needed (default value: B<-g -"
 "O2>, or B<-g\\ -O0> if B<noopt> is specified in DEB_BUILD_OPTIONS). "
-"Overriding options can be used to explicitely set a higher optimization "
+"Overriding options can be used to explicitly set a higher optimization "
 "level, or work around compiler bugs, which only can be seen with some "
 "optimization levels (the last opt level \"wins\")."
 msgstr ""
@@ -11215,7 +11215,7 @@ msgstr "B<dpkg-trigger> [I<flaggor>...] I<kommando>"
 #. type: Plain text
 #: dpkg-trigger.1:15
 msgid ""
-"B<dpkg-trigger> is a tool to explicitely activate triggers and check for its "
+"B<dpkg-trigger> is a tool to explicitly activate triggers and check for its "
 "support on the running B<dpkg>."
 msgstr ""
 "B<dpkg-trigger> är ett verktyg för att explicit aktivera utlösare och för "
