--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2010-01-03  Raphael Hertzog  <hertzog@debian.org>
+
+	* configure.ac: Release 1.14.28.
+
+2010-01-03  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Package/V3/quilt.pm,
+	scripts/Dpkg/Source/Package/V2.pm: cherry-pick fixes
+	from master branch concerning new source formats:
+	- "3.0 (quilt)" now creates and uses .pc directory
+	- "3.0 (quilt)" verifies version of the quilt metadata before build
+	- "3.0 (quilt)" checks debian/patches{,series} before build
+	- "2.0" and "3.0 (quilt)" now fail if several orig.tar files
+	  are available
+	- "2.0" and "3.0 (quilt)" don't complain on binary files that are
+	  ignored
+
 2009-11-13  Raphael Hertzog  <hertzog@debian.org>
 
 	* configure.ac: Release 1.14.27.
