--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.28) UNRELEASED; urgency=low
+dpkg (1.14.28) stable; urgency=low
 
   * Another round of updates concerning new source formats:
     - fix dpkg-source to not complain on binary files that are ignored and are
@@ -16,7 +16,7 @@ dpkg (1.14.28) UNRELEASED; urgency=low
       relies on the .pc directory to know whether patches are applied or
       not. Closes: #557667
 
- -- Raphael Hertzog <hertzog@debian.org>  Sun, 03 Jan 2010 18:21:35 +0100
+ -- Raphael Hertzog <hertzog@debian.org>  Sun, 03 Jan 2010 19:40:09 +0100
 
 dpkg (1.14.27) stable; urgency=low
 
