--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ dpkg (1.15.5.6) UNRELEASED; urgency=low
   * dpkg-source: with format "3.0 (quilt)" ensure quilt's .pc directory is
     created before trying to register a new patch in .pc/applied-patches.
     Thanks to Tommi Vainikainen <thv+debian@iki.fi> for the report and the
-    patch.
+    patch. Closes: #561237
 
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 23 Dec 2009 17:05:43 +0100
 
