--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.15.5.6) UNRELEASED; urgency=low
     created before trying to register a new patch in .pc/applied-patches.
     Thanks to Tommi Vainikainen <thv+debian@iki.fi> for the report and the
     patch. Closes: #561237
+  * Fix dpkg-buildpackage to set "parallel=" in DEB_BUILD_OPTIONS instead of
+    the invalid "parallel=-1" when option "-j" is given. Closes: #562038
 
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 23 Dec 2009 17:05:43 +0100
 
