--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -67,7 +67,8 @@ source package formats.
 .RI "\fB\-\-print\-format\fP " directory
 Print the source format that would be used to build the source package if
 \fBdpkg\-source \-b \fIdirectory\fR was called (in the same conditions and
-with the same options).
+with the same parameters). In particular it's important that the upstream
+tarball (if any) can be found in the current directory.
 
 .TP
 .BR \-h ", " \-\-help
