--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.15.5.6) UNRELEASED; urgency=low
+dpkg (1.15.5.6) unstable; urgency=low
 
   * dpkg-source: with format "3.0 (quilt)" ensure quilt's .pc directory is
     created before trying to register a new patch in .pc/applied-patches.
@@ -10,7 +10,7 @@ dpkg (1.15.5.6) UNRELEASED; urgency=low
     STDERR when the requested format is discarded. Closes: #560391
   * Add ${misc:Depends} in all Depends fields.
 
- -- Raphael Hertzog <hertzog@debian.org>  Wed, 23 Dec 2009 17:05:43 +0100
+ -- Raphael Hertzog <hertzog@debian.org>  Fri, 08 Jan 2010 17:57:43 +0100
 
 dpkg (1.15.5.5) unstable; urgency=low
 
