--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.15.5.6) UNRELEASED; urgency=low
     the invalid "parallel=-1" when option "-j" is given. Closes: #562038
   * Clarify how dpkg-source --print-format works and display messages on
     STDERR when the requested format is discarded. Closes: #560391
+  * Add ${misc:Depends} in all Depends fields.
 
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 23 Dec 2009 17:05:43 +0100
 
