dpkg-shlibdeps(1): fix typo "informations" -> "information"

--- a/man/dpkg-shlibdeps.1
+++ b/man/dpkg-shlibdeps.1
@@ -85,7 +85,7 @@ at the symbols). It's thus often stronger than really needed but very safe
 and easy to handle.
 .P
 The dependencies for a library are looked up in several places. The first
-file providing informations for the library of interest is used:  
+file providing information for the library of interest is used:
 .IP debian/shlibs.local
 Package-local overriding shared library dependency information.
 .IP /etc/dpkg/shlibs.override
