--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8922,7 +8922,7 @@ msgstr ""
 #: dpkg-shlibdeps.1:89
 msgid ""
 "The dependencies for a library are looked up in several places. The first "
-"file providing informations for the library of interest is used:"
+"file providing information for the library of interest is used:"
 msgstr ""
 "Die Abhängigkeiten für eine Bibliothek wird an verschiedenen Stellen "
 "nachgeschlagen. Die erste Datei, die Informationen für die betrachtete "
