--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -8921,7 +8921,7 @@ msgstr ""
 #: dpkg-shlibdeps.1:89
 msgid ""
 "The dependencies for a library are looked up in several places. The first "
-"file providing informations for the library of interest is used:"
+"file providing information for the library of interest is used:"
 msgstr ""
 "Les dépendances d'une bibliothèque sont recherchées à plusieurs endroits. Le "
 "premier fichier d'informations trouvé qui concerne la bibliothèque est "
