--- a/man/po/hu.po
+++ b/man/po/hu.po
@@ -7465,7 +7465,7 @@ msgstr ""
 #: dpkg-shlibdeps.1:89
 msgid ""
 "The dependencies for a library are looked up in several places. The first "
-"file providing informations for the library of interest is used:"
+"file providing information for the library of interest is used:"
 msgstr ""
 
 #. type: IP
