--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -9016,7 +9016,7 @@ msgstr ""
 #: dpkg-shlibdeps.1:89
 msgid ""
 "The dependencies for a library are looked up in several places. The first "
-"file providing informations for the library of interest is used:"
+"file providing information for the library of interest is used:"
 msgstr ""
 "Zależności dla biblioteki są wyszukiwane w kilku miejscach. Używany jest "
 "pierwszy plik zawierający informacje dla danej biblioteki:"
