--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -8700,7 +8700,7 @@ msgstr ""
 #: dpkg-shlibdeps.1:89
 msgid ""
 "The dependencies for a library are looked up in several places. The first "
-"file providing informations for the library of interest is used:"
+"file providing information for the library of interest is used:"
 msgstr ""
 "Beroenden för ett bibliotek slås upp på flera platser. Den första filen som "
 "innehåller information om det intressanta biblioteket används:"
