Update German translation of manual pages
Update to 1680t.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2010-01-03 16:49+0100\n"
+"PO-Revision-Date: 2010-01-10 12:04+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -9764,6 +9764,20 @@ msgstr ""
 "Gibt das Quellformat aus, dass zum Bau des Quellpakets verwandt würde, falls "
 "B<dpkg-source -b >I<Verzeichnis> aufgerufen würde (unter den gleichen "
 "Bedingungen und mit den gleichen Optionen)."
+
+# type: Plain text
+#: dpkg-source.1:72
+msgid ""
+"Print the source format that would be used to build the source package if "
+"B<dpkg-source -b >I<directory> was called (in the same conditions and with "
+"the same parameters). In particular it's important that the upstream tarball "
+"(if any) can be found in the current directory."
+msgstr ""
+"Gibt das Quellformat aus, dass zum Bau des Quellpakets verwandt würde, falls "
+"B<dpkg-source -b >I<Verzeichnis> aufgerufen würde (unter den gleichen "
+"Bedingungen und mit den gleichen Optionen). Insbesondere ist es wichtig, dass "
+"der Tarball der Originalautoren (falls vorhanden) im aktuellen Verzeichnis "
+"gefunden werden kann."
 
 #. type: SH
 #: dpkg-source.1:79
