--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
       representation ("$dep") to provide the result of $dep->output()
     - prefix public functions in Dpkg::Deps with deps_ and export them
       by default
+  * Drop debian-maintainers from Suggests since it's obsolete, the
+    corresponding keyring is in debian-keyring.
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
