dpkg-gensymbols(1): document the new -V option

--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -420,6 +420,12 @@ Enable debug mode. Numerous messages are displayed to explain what
 .B dpkg\-gensymbols
 does.
 .TP
+.BI \-V
+Enable verbose mode. The generated symbols file contains deprecated
+symbols as comments. Furthermore in template mode, pattern symbols
+are followed by comments listing real symbols that have matched the
+pattern.
+.TP
 .BR \-h ", " \-\-help
 Show the usage message and exit.
 .TP
