Update German scripts translation
Update to 490t.

--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-01-03 16:30+0100\n"
-"PO-Revision-Date: 2010-01-03 16:35+0100\n"
+"PO-Revision-Date: 2010-01-13 16:09+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -890,6 +890,9 @@ msgid ""
 "  -O                       write to stdout, not .../DEBIAN/symbols.\n"
 "  -t                       write in template mode (tags are not\n"
 "                           processed and included in output).\n"
+"  -V                       verbose output. Write deprecated symbols and\n"
+"                           pattern matching symbols as comments\n"
+"                           (in template mode only).\n"
 "  -d                       display debug information during work.\n"
 "  -h, --help               show this help message.\n"
 "      --version            show the version.\n"
@@ -915,6 +918,10 @@ msgstr ""
 "  -t                       schreibe im Vorlagenmodus (Makrierungen werden\n"
 "                           nicht verarbeitet und in die Ausgabe "
 "aufgenommen).\n"
+"  -V                       geschwätzige Ausgabe. Schreibe veraltete Symbole\n"
+"                           und Muster, die auf Symbole passen, als "
+"Kommmentare\n"
+"                           (nur im Vorlagen-Modus).\n"
 "  -d                       zeige bei Arbeit Debug-Informationen an.\n"
 "  -h, --help               zeige diese Hilfemeldung.\n"
 "      --version            zeige die Version.\n"
@@ -952,10 +959,15 @@ msgstr "einige neue Symbole sind in der Symbol-Datei aufgetaucht: %s"
 msgid "see diff output below"
 msgstr "lesen Sie die folgende Diff-Ausgabe"
 
+#: scripts/dpkg-gensymbols.pl:260
+#, perl-format
+msgid "some symbols or patterns disappeared in the symbols file: %s"
+msgstr "einige Symbole oder Muster sind aus der Symbol-Datei verschwunden: %s"
+
 #: scripts/dpkg-gensymbols.pl:270
 #, perl-format
 msgid "some symbols disappeared in the symbols file: %s"
-msgstr "einige Symbole sind in der Symbol-Datei verschwunden: %s"
+msgstr "einige Symbole sind aus der Symbol-Datei verschwunden: %s"
 
 #: scripts/dpkg-gensymbols.pl:287
 #, perl-format
