Dpkg::Shlibs::Objdump: accept filenames with spaces and colons

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     corresponding keyring is in debian-keyring.
   * Merge support of symbol patterns in dpkg-gensymbols. Thanks to
     Modestas Vainius for his work (see further for more details).
+  * Accept filename with spaces and colon in the output of objdump.
+    Required so that dpkg-shlibdeps support such files properly.
+    Thanks to Raphaël Geissert for the patch. Closes: #565712
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
