Update German scripts translation
Update to 491t.

--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2010-01-03 16:30+0100\n"
-"PO-Revision-Date: 2010-01-13 16:09+0100\n"
+"PO-Revision-Date: 2010-01-23 09:55+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2404,6 +2404,10 @@ msgstr "%s ist keine unterstützte Kompressionsmethode"
 #: scripts/Dpkg/Source/Compressor.pm:90
 msgid "Dpkg::Source::Compressor can only start one subprocess at a time"
 msgstr "Dpkg::Source::Compressor kann nur einen Subprozess auf einmal starten"
+
+#: scripts/Dpkg/Compression/Process.pm:118
+msgid "Dpkg::Compression::Process can only start one subprocess at a time"
+msgstr "Dpkg::Compression::Process kann nur einen Subprozess auf einmal starten"
 
 #: scripts/Dpkg/Source/Functions.pm:32
 #, perl-format
