dpkg-gensymbols: add source version to the diff label.
Source version is also useful to have in the output. Also format the string
according to dpkg-name rules.

--- a/debian/changelog
+++ b/debian/changelog
@@ -87,6 +87,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     dpkg-gensymbols is now able to detect NEW/MISSING symbols when patterns are
     present in the symbol file (Closes: #541464). Please note, however, that
     there is no way to detect symbol changes in the pattern match sets.
+  * Add source version to the dpkg-gensymbols diff label, reformat it according
+    to the rules of dpkg-name.
 
   [ Jonathan Nieder ]
   * Fix a file handle leak in “dpkg-deb --info”. Thanks to Raphael Geissert
