dpkg-gensymbols: add -a<arch> option.
Use this option to generate a symbol file or diff for any architecture provided
its binaries are already available.

--- a/debian/changelog
+++ b/debian/changelog
@@ -89,6 +89,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     there is no way to detect symbol changes in the pattern match sets.
   * Add source version to the dpkg-gensymbols diff label, reformat it according
     to the rules of dpkg-name.
+  * Add -a<arch> option to dpkg-gensymbols.
 
   [ Jonathan Nieder ]
   * Fix a file handle leak in “dpkg-deb --info”. Thanks to Raphael Geissert
