--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -415,6 +415,11 @@ libraries have been introduced.
 This value can be overridden by the environment variable
 DPKG_GENSYMBOLS_CHECK_LEVEL.
 .TP
+.BI \-a arch
+Assume \fIarch\fR as host architecture when processing symbol files. Use this
+option to generate a symbol file or diff for any architecture provided its
+binaries are already available.
+.TP
 .BI \-d
 Enable debug mode. Numerous messages are displayed to explain what 
 .B dpkg\-gensymbols
