dpkg-source: unpacking a 3.0 (quilt) source package configures quilt accordingly
The files .pc/.quilt_patches and .pc/.quilt_series are always created so
that any quilt invocation will know where to look for (or where to store)
patches. This will only work with quilt >= 0.48-5.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Accept filename with spaces and colon in the output of objdump.
     Required so that dpkg-shlibdeps support such files properly.
     Thanks to Raphaël Geissert for the patch. Closes: #565712
+  * When unpacking a "3.0 (quilt)" source package, tell quilt where
+    patches are (to be) stored. Requires quilt >= 0.48-5 to work.
+    Closes: #557619
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
