--- a/debian/changelog
+++ b/debian/changelog
@@ -54,6 +54,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     are already fatal on that case.
   * Add new deb-split(5) man page.
   * Fix misspellings of “explicitly” all over the place.
+  * Normalize ar member names when reading (removing trailing spaces and
+    slash), this allows deb-split packages be created with GNU ar.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
