--- a/man/deb-split.5
+++ b/man/deb-split.5
@@ -1,4 +1,4 @@
-.TH deb\-split 5 "2009-12-31" "Debian Project" "Debian"
+.TH deb\-split 5 "2010-01-28" "Debian Project" "Debian"
 .SH NAME
 deb\-split \- Debian multi-part binary package format
 .SH SYNOPSIS
@@ -8,6 +8,7 @@ The multi-part \fB.deb\fP format is used to split big packages into smaller
 pieces to ease transport in small media.
 .SH FORMAT
 The file is an \fBar\fP archive with a magic value of \fB!<arch>\fP.
+The file names might contain a trailing slash (since dpkg 1.15.6).
 .PP
 The first member is named \fBdebian\-split\fP and contains a series
 of lines, separated by newlines. Currently seven lines are present.
