--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * When unpacking a "3.0 (quilt)" source package, tell quilt where
     patches are (to be) stored. Requires quilt >= 0.48-5 to work.
     Closes: #557619
+  * Fix update-alternatives to not try to reinstall an unknown alternative
+    when the link group is broken, instead switch to the best choice in
+    automatic mode. Closes: #566406
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
