libdpkg: Handle compression level as an integer
Change compress_filter() to take an int for compress_level, and add
a new function in dpkg-deb to parse and validate the argument option
to not accept bogus values.

--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Fix misspellings of “explicitly” all over the place.
   * Normalize ar member names when reading (removing trailing spaces and
     slash), this allows deb-split packages be created with GNU ar.
+  * Validate compression level on dpkg-deb argument parsing.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
