Change dpkg-dev to Depend on perl instead of perl5 and perl-modules

--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     Thanks to Jonathan Nieder for several of the patches.
   * Do not print unambiguous epoch on dpkg file overwrite error.
   * Rename Dpkg::IPC::fork_and_exec() to Dpkg::IPC::spawn().
+  * Change dpkg-dev to Depend on perl instead of perl5 and perl-modules.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
