Italian translation update

--- a/po/it.po
+++ b/po/it.po
@@ -1,5 +1,5 @@
 # Italian translation of dpkg
-# Copyright (C) 2000-2008, 2009 Free Software Foundation, Inc.
+# Copyright (C) 2000-2008, 2009, 2010 Free Software Foundation, Inc.
 # This file is distributed under the same license as the dpkg package.
 # Lele Gaifax <lele@seldati.it>, 2000, 2001, 2002, 2003, 2004, 2005, 2006.
 # Stefano Canepa <sc@linux.it>, 2004, 2005.
@@ -19,13 +19,13 @@
 # Collegamento utile
 #
 # https://lists.ubuntu.com/archives/ubuntu-devel/2007-January/023212.html
-# Milo Casagrande <milo@ubuntu.com>, 2009.
+# Milo Casagrande <milo@ubuntu.com>, 2009, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg-1.15.4.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2009-11-16 16:59-0600\n"
+"PO-Revision-Date: 2010-01-29 17:16+0100\n"
 "Last-Translator: Milo Casagrande <milo@ubuntu.com>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -5599,9 +5599,9 @@ msgid "setting up automatic selection of %s."
 msgstr "impostazione selezione automatica di %s."
 
 #: scripts/update-alternatives.pl:297
-#, fuzzy, perl-format
+#, perl-format
 msgid "alternative %s for %s not registered, not setting."
-msgstr "alternativa %s per %s non registrata, non viene rimossa."
+msgstr "alternativa %s per %s non registrata, non viene impostata."
 
 #: scripts/update-alternatives.pl:306
 #, perl-format
@@ -5860,85 +5860,3 @@ msgid ""
 msgstr ""
 "saltata la creazione di %s poiché il file %s associato (del gruppo %s) non "
 "esiste."
-
-#~ msgid "unknown data type `%i' in buffer_write\n"
-#~ msgstr "tipo di dato \"%i\" sconosciuto in buffer_write\n"
-
-#~ msgid "unknown data type `%i' in buffer_read\n"
-#~ msgstr "tipo di dato \"%i\" sconosciuto in buffer_read\n"
-
-#~ msgid "unable to change ownership of new dist conffile `%.250s'"
-#~ msgstr ""
-#~ "impossibile modificare il proprietario del nuovo file di configurazione "
-#~ "\"%.250s\""
-
-#~ msgid "unable to set mode of new dist conffile `%.250s'"
-#~ msgstr ""
-#~ "impossibile impostare i permessi del nuovo file di configurazione \"%.250s"
-#~ "\""
-
-#~ msgid "wait for shell failed"
-#~ msgstr "attesa per la shell non riuscita"
-
-#~ msgid "read error in diversions [i]"
-#~ msgstr "errore di lettura nelle deviazioni [i]"
-
-#~ msgid "unlink"
-#~ msgstr "unlink"
-
-#~ msgid "chmod"
-#~ msgstr "chmod"
-
-# (ndt) questo è un problema...
-# più avanti questa stessa stringa viene usata per
-# indicare la stessa azione ma in un altro modo...
-# qui va bene eliminazione, più avanti dovrebbe essere
-# eliminare
-#~ msgid "delete"
-#~ msgstr "eliminazione"
-
-# (ndt) le tre stringhe di prima
-# vengono sostituite al primo posto...
-# bello schifo...
-#~ msgid "failed to %s '%.255s'"
-#~ msgstr "%s di \"%.255s\" non riuscita"
-
-#~ msgid "wait for dpkg-split failed"
-#~ msgstr "attesa per dpkg-split non riuscita"
-
-#~ msgid "cannot remove file `%.250s'"
-#~ msgstr "impossibile rimuovere il file \"%.250s\""
-
-#~ msgid ""
-#~ "\n"
-#~ "Copyright (C) 2000 Wichert Akkerman."
-#~ msgstr ""
-#~ "\n"
-#~ "Copyright © 2000 Wichert Akkerman."
-
-#~ msgid "no mode specified"
-#~ msgstr "nessuna modalità specificata"
-
-#~ msgid "illegal user %s"
-#~ msgstr "utente %s non consentito"
-
-#~ msgid "non-existing user %s"
-#~ msgstr "utente %s inesistente"
-
-#~ msgid "illegal group %s"
-#~ msgstr "gruppo %s non consentito"
-
-#~ msgid "non-existing group %s"
-#~ msgstr "gruppo %s inesistente"
-
-#~ msgid "illegal mode %s"
-#~ msgstr "modalità %s non consentita"
-
-#~ msgid "aborting"
-#~ msgstr "chiusura in corso"
-
-#~ msgid "cannot open statoverride: %s"
-#~ msgstr "impossibile aprire statoverride: %s"
-
-#~ msgid "Multiple overrides for \"%s\", aborting"
-#~ msgstr "Molteplici override per \"%s\", chiusura in corso"
