Update Swedish translation.
po/sv.po: 965t0f0u.
man/po/sv.po: 1656t0f0u.
scripts/po/sv.po: 485t0f0u.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -1,12 +1,12 @@
 # Manual page for dpkg
-# Peter Krefting <peterk@debian.org>, 1999-2009.
-# Copyright 1999-2009 Software in the Public Interest
+# Peter Krefting <peterk@debian.org>, 1999-2010.
+# Copyright 1999-2010 Software in the Public Interest
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2010-01-03 16:52+0100\n"
+"PO-Revision-Date: 2010-01-31 20:01+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -9389,7 +9389,6 @@ msgstr ""
 
 #. type: Plain text
 #: dpkg-source.1:65
-#, fuzzy
 #| msgid ""
 #| "B<dpkg-source> will build the source package with the first format that "
 #| "works from this ordered list: the format(s) indicated with the I<--"
@@ -9406,7 +9405,7 @@ msgstr ""
 "B<dpkg-source> kommer bygga källkodspaketet med det första format som "
 "fungerar från en lista i denna ordning: formatet som anges med "
 "kommandoradsflaggan/-orna I<--format>,  som anges i I<debian/source/format>, "
-"\"1.0\", \"3.0 (eget)\". Se avsnittet B<FORMAT PÅ KÄLLKODSPAKET> för en "
+"\"1.0\", \"3.0 (quilt)\", \"3.0 (native)\". Se avsnittet B<FORMAT PÅ KÄLLKODSPAKET> för en "
 "omfattande beskrivning av de olika källkodspaketformaten."
 
 #. type: TP
