--- a/po/sv.po
+++ b/po/sv.po
@@ -1,6 +1,6 @@
 # Swedish translation of dpkg
-# Copyright © 1999-2009 Software in the Public Interest
-# Peter Krefting <peterk@debian.org>, 1999-2009.
+# Copyright © 1999-2010 Software in the Public Interest
+# Peter Krefting <peterk@debian.org>, 1999-2010.
 # Daniel Nylander <po@danielnylander.se>, 2006, 2008.
 #
 msgid ""
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-27 18:45+0100\n"
-"PO-Revision-Date: 2009-11-14 17:50+0100\n"
+"PO-Revision-Date: 2010-01-31 20:02+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5323,9 +5323,9 @@ msgid "setting up automatic selection of %s."
 msgstr "aktiverar automatiskt val av %s."
 
 #: scripts/update-alternatives.pl:297
-#, fuzzy, perl-format
+#, perl-format
 msgid "alternative %s for %s not registered, not setting."
-msgstr "alternativet %s för %s har inte registrerats, tar inte bort."
+msgstr "alternativet %s för %s har inte registrerats, ställer inte in."
 
 #: scripts/update-alternatives.pl:306
 #, perl-format
