--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -1,14 +1,14 @@
 # Swedish translation of dpkg
-# Copyright © 2007-2009 Software in the Public Interest
+# Copyright © 2007-2010 Software in the Public Interest
 # This file is distributed under the same license as the dpkg package.
-# Peter Krefting <peterk@debian.org>, 2007-2009.
+# Peter Krefting <peterk@debian.org>, 2007-2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.15.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-11-17 10:12+0100\n"
-"PO-Revision-Date: 2010-01-03 16:42+0100\n"
+"PO-Revision-Date: 2010-01-31 20:03+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2888,7 +2888,7 @@ msgstr "-b tar bara en parameter för formatet \"%s\""
 #: scripts/Dpkg/Source/Package/V2.pm:252
 #, perl-format
 msgid "several orig.tar files found (%s and %s) but only one is allowed"
-msgstr ""
+msgstr "flera orig.tar-filer hittades (%s och %s) men endast en tillåts"
 
 #: scripts/Dpkg/Source/Package/V2.pm:287
 msgid "copy of the debian directory"
@@ -3084,12 +3084,12 @@ msgstr "följande inställning(ar) slogs av av dpkg-source"
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:64
 #, perl-format
 msgid "%s should be a directory or non-existing"
-msgstr ""
+msgstr "%s borde vara en katalog eller inte finnas"
 
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:70
 #, perl-format
 msgid "%s should be a file or non-existing"
-msgstr ""
+msgstr "%s borde vara en fil eller inte finnas"
 
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:106
 #, perl-format
