Add support for xz compressed data.tar member of binary packages
Use the xz command from xz-utils to support xz-compressed binary
packages. Add xz-utils to dpkg's Pre-Depends.

The xz format is very similar to the lzma format, but it fixes
some omissions in the latter, most notably a magic number for
identification by file(1).

Closes: #542160

Based-on-patch-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -115,6 +115,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Securely remove newly installed files when rolling-back a failed unpack.
   * Change default lzma compression level from 9 to 6.
     Thanks to Jonathan Nieder for the initial patch.
+  * Add support for xz compressed data.tar member of binary packages. Add
+    xz-utils to dpkg's Pre-Depends. Closes: #542160
+    Thanks to Jonathan Nieder for the initial patch.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
