dpkg: Do not print unambiguous epoch on dpkg file overwrite error

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Validate compression level on dpkg-deb argument parsing.
   * Fix error handling, clean up and refactor compression code.
     Thanks to Jonathan Nieder for several of the patches.
+  * Do not print unambiguous epoch on dpkg file overwrite error.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
