Move Frank to former maintainers

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,12 +12,12 @@ based on the Perl implementation by:
 It is currently maintained by:
 
 	Guillem Jover <guillem@debian.org>
-	Frank Lichtenheld <djpig@debian.org>
 	Raphael Hertzog <hertzog@debian.org>
 	Christian Perrier <bubulle@debian.org> (translation coordinator)
 
 and has previously been maintained by:
 
+	Frank Lichtenheld <djpig@debian.org> (2006-2009)
 	Brendan O'Dea <bod@debian.org> (2006-2007)
 	Scott James Remnant <scott@netsplit.com> (2004-2005)
 	Adam Heath <doogie@brainfood.com> (2001-2003)
