Fix small memory leaks related to scandir()
The array of pointers returned by scandir and the pointers in it were
not being freed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Do not print unambiguous epoch on dpkg file overwrite error.
   * Rename Dpkg::IPC::fork_and_exec() to Dpkg::IPC::spawn().
   * Change dpkg-dev to Depend on perl instead of perl5 and perl-modules.
+  * Fix small memory leaks related to scandir() in dpkg-deb and libdpkg.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
