dpkg-deb: Fix resource leak in --info
“dpkg-deb -I foo.deb” leaks the file handle for the package’s
control file. Check for read errors and close the file before
it falls out of scope.

Found by cppcheck.

Reported-by: Raphael Geissert <atomo64@gmail.com>
Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -87,6 +87,10 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     present in the symbol file (Closes: #541464). Please note, however, that
     there is no way to detect symbol changes in the pattern match sets.
 
+  [ Jonathan Nieder ]
+  * Fix a file handle leak in “dpkg-deb --info”. Thanks to Raphael Geissert
+    for the report and patch.
+
   [ Updated dpkg translations ]
   * French (Christian PERRIER).
   * German (Sven Joachim).
