--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,7 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Rename Dpkg::IPC::fork_and_exec() to Dpkg::IPC::spawn().
   * Change dpkg-dev to Depend on perl instead of perl5 and perl-modules.
   * Fix small memory leaks related to scandir() in dpkg-deb and libdpkg.
+  * Fix dpkg-query and dpkg-trigger to actually print a version on --version.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
