dpkg: Always spawn a new shell on conffile prompt
Stop supporting self backgrounding, remove DPKG_NO_TSTP environment
variable support, as we always spawn a shell now.

This will allow setting useful environment variables for the user to use
with other tools. And is less confusing, as the action to go back to
dpkg does not depend on how dpkg was run.

Closes: #38334

--- a/debian/changelog
+++ b/debian/changelog
@@ -95,6 +95,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Change dpkg-dev to Depend on perl instead of perl5 and perl-modules.
   * Fix small memory leaks related to scandir() in dpkg-deb and libdpkg.
   * Fix dpkg-query and dpkg-trigger to actually print a version on --version.
+  * Always spawn a new shell on conffile prompt, instead of supporting
+    self backgrounding, remove DPKG_NO_TSTP environment variable support.
+    Closes: #38334
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
