dpkg: Set interesting environment variables on conffile shell spawn
Set DPKG_SHELL_REASON, DPKG_CONFFILE_OLD and DPKG_CONFFILE_NEW
environment variables when spawning a shell for conffile
examination, so that the user can easily use them for scripting, or
as easy mnemonics.

Suggested-by: Daniel Martin <Daniel.Martin@jhu.edu>

Closes: #60329

--- a/debian/changelog
+++ b/debian/changelog
@@ -98,6 +98,9 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Always spawn a new shell on conffile prompt, instead of supporting
     self backgrounding, remove DPKG_NO_TSTP environment variable support.
     Closes: #38334
+  * Set DPKG_SHELL_REASON, DPKG_CONFFILE_OLD and DPKG_CONFFILE_NEW environment
+    variables when spawning a shell for conffile examination. Closes: #60329
+    Thanks to Daniel Martin <Daniel.Martin@jhu.edu> for the idea.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
