--- a/debian/changelog
+++ b/debian/changelog
@@ -101,6 +101,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Set DPKG_SHELL_REASON, DPKG_CONFFILE_OLD and DPKG_CONFFILE_NEW environment
     variables when spawning a shell for conffile examination. Closes: #60329
     Thanks to Daniel Martin <Daniel.Martin@jhu.edu> for the idea.
+  * Add support for disabling update-alternatives at configure time using
+    --withouth-update-alternatives.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
