build: Add new --without-install-info
Other distributions already ship the GNU reimplementation of install-info
which is slated to completely replace the Debian one in the near future,
additionally the current install-info in dpkg is just a wrapper, so we
allow them to disable it at configure time.

--- a/debian/changelog
+++ b/debian/changelog
@@ -103,6 +103,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
     Thanks to Daniel Martin <Daniel.Martin@jhu.edu> for the idea.
   * Add support for disabling update-alternatives at configure time using
     --withouth-update-alternatives.
+  * Add support for disabling install-info at configure time using
+    --withouth-install-info.
 
   [ Modestas Vainius ]
   * Implement symbol patterns (Closes: #563752). From now on, it is possible to
