Add Jonathan Nieder and Modestas Vainius to THANKS

--- a/THANKS
+++ b/THANKS
@@ -85,6 +85,7 @@ Joey Hess <joeyh@debian.org>
 Johannes Veser <veser@gmx.de>
 John Wright <jsw@debian.org>
 John Zaitseff <J.Zaitseff@zap.org.au>
+Jonathan Nieder <jrnieder@gmail.com>
 Jordi Mallach <jordi@debian.org>
 Josip Rodin <jrodin@jagor.srce.hr>
 Juan Cespedes <cespedes@debian.org>
@@ -127,6 +128,7 @@ Michel Lespinasse <walken@zoy.org>
 Miguel Figueiredo <elmig@debianpt.org>
 Miquel van Smoorenburg <miquels@cistron.nl>
 Miroslav Kure <kurem@debian.cz>
+Modestas Vainius <modax@debian.org>
 Moritz Muehlenhoff <jmm@inutil.org>
 NIIBE Yutaka <gniibe@fsij.org>
 Nicolas Bonifas
