Add accent on my name in AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,7 +12,7 @@ based on the Perl implementation by:
 It is currently maintained by:
 
 	Guillem Jover <guillem@debian.org>
-	Raphael Hertzog <hertzog@debian.org>
+	Raphaël Hertzog <hertzog@debian.org>
 	Christian Perrier <bubulle@debian.org> (translation coordinator)
 
 and has previously been maintained by:
