Add accent on Raphaël's name in several files

--- a/THANKS
+++ b/THANKS
@@ -144,7 +144,7 @@ Pierre Habouzit <madcoder@debian.org>
 Piotr Engelking <inkerman42@gmail.com>
 Piotr Roszatycki <dexter@fnet.pl>
 Rakesh 'arky' Ambati <rakesh_ambati@yahoo.com>
-Raphael Hertzog <hertzog@debian.org>
+Raphaël Hertzog <hertzog@debian.org>
 Richard Kettlewell <rjk@sfere.greenend.org.uk>
 Riku Voipio <riku.voipio@iki.fi>
 Robert Luberda <robert@debian.org>
