--- a/man/deb-symbols.5
+++ b/man/deb-symbols.5
@@ -1,4 +1,4 @@
-.\" Author: Raphael Hertzog
+.\" Author: Raphaël Hertzog
 .TH deb\-symbols 5 "2007-07-16" "Debian Project" "dpkg utilities"
 .SH NAME
 deb\-symbols \- Debian's extended shared library information file
