--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -1,4 +1,4 @@
-.\" Authors: Ian Jackson, Raphael Hertzog
+.\" Authors: Ian Jackson, Raphaël Hertzog
 .TH dpkg\-source 1 "2009-11-11" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-source \- Debian source package (.dsc) manipulation tool
