Add $VERSION numbers to all perl modules
Modules whose API should be stable have a version 1.00.
The modules with version 0.01 are expected to have further API
changes in the (near) future or are deemed to be useful mostly
for dpkg-dev's internal usage.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,8 @@ dpkg (1.15.6) UNRELEASED; urgency=low
   * Don't return duplicate bug numbers in Launchpad-Bugs-Fixed:.
     Thanks to Brian Murray <brian@ubuntu.com> for the report
     and the patch. Closes: #569618
+  * Add $VERSION numbers to all perl modules. Closes: #465256
+    1.00 and higher means that the API should be stable
 
   [ Guillem Jover ]
   * Handle argument parsing in dpkg-checkbuilddeps and dpkg-scanpackages
